fix error dialog making it stretch

--- a/web/src/styles/screens/Loader.scss
+++ b/web/src/styles/screens/Loader.scss
@@ -10,9 +10,10 @@
   }
 
   &__text {
-    max-width: 400px;
+    width: 400px;
     display: flex;
     flex-direction: column;
+    align-items: stretch;
 
     font-weight: 500;
     font-style: italic;
